<resources>
    <!-- App Title -->
    <string name="app_name">WoW Mount Collector</string>

    <!-- Mount Database Fragment -->
    <string name="db_title">Mount Database</string>
    <string name="db_desc">Search through the list of mounts below and click one to view more details</string>
    <string name="db_filterButton">Filter</string>
    <string name="db_filteredTextView">Currently filtered by:\n %1$s</string>
    <string name="db_imageDesc">World of Warcraft Icon</string>
    <string name="db_mountHeader">Mounts</string>
    <string name="db_receivedFromApi">*mounts retrieved from WoW APIs</string>
    <string name="db_status_noMounts">No items to display</string>
    <string name="db_status_offlineMode">Unable to contact WoW APIs. You may access your collection only in offline mode</string>

    <!-- Collection Fragment -->
    <string name="collection_title">Collection</string>
    <string name="collection_description">View all the mounts you have collected</string>
    <string name="collection_imageDescription">Collection Icon</string>
    <string name="collection_mountHeader">Mounts</string>
    <string name="collection_addInstruction">Add more from mount database</string>

    <!-- Detail Activity -->
    <string name="detail_loading">Loading...</string>
    <string name="detail_description">Description</string>
    <string name="detail_addToCollection">Add to Collection</string>
    <string name="detail_RemoveFromCollection">Remove from Collection</string>
    <string name="detail_imageDesc">Image of mount</string>
    <string name="detail_intent_mountId">mountId</string>

    <!-- Collection Adapter -->
    <string name="collectionAdapter_dateAdded">Date added:  %1$s</string>
    <string name="collectionAdapter_deleteAlert">Removing a mount will permanently remove all of its details. \n\nIt can only be added again from the mount database page.
                    \n\nAre you sure?</string>
    <string name="collectionAdapter_yes">Yes</string>
    <string name="collectionAdapter_no">No</string>

    <!-- Shared Preferences -->
    <string name="sharedPreferences_file">Collection</string>
    <string name="sharedPreferences_token_key">tokenKey</string>

    <!-- Navigation Drawer -->
    <string name="open">Open Drawer</string>
    <string name="close">Close Drawer</string>

    <!-- API Endpoints -->
    <string name="api_tokenRequest">https://us.battle.net/oauth/token</string>
    <string name="api_tokenRequestParameters">client_id=%1$s&amp;client_secret=%2$s&amp;grant_type=client_credentials</string>
    <string name="api_allMounts">https://us.api.blizzard.com/data/wow/mount/index?namespace=static-us&amp;locale=en_US&amp;access_token=%1$s</string>
    <string name="api_creatureDisplay">https://us.api.blizzard.com/data/wow/media/creature-display/%1$s?namespace=static-us&amp;locale=en_US&amp;access_token=%2$s</string>
    <string name="api_mountDetail">https://us.api.blizzard.com/data/wow/mount/%1$s?namespace=static-us&amp;locale=en_US&amp;access_token=%2$s</string>

    <!-- Helpers -->
    <string name="helper_dateFormat">"dd-MM-yyyy"</string>


</resources>