<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MountDatabaseFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/PageLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:backgroundTint="@color/backgroundDark"
        tools:context=".MountDatabaseFragment">

        <TextView
            android:id="@+id/CollectionTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/db_title"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/DatabaseDescriptionTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="64dp"
            android:text="@string/db_desc"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/CollectionTitleTextView" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ConstraintLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            android:backgroundTint="@color/backgroundDark"
            android:paddingBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.378"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DatabaseDescriptionTextView">

            <ImageView
                android:id="@+id/MountDatabaseImageView"
                android:layout_width="125dp"
                android:layout_height="100dp"
                android:contentDescription="@string/db_imageDesc"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/FilterButton"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/wowicon_foreground" />

            <Button
                android:id="@+id/FilterButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/darkGold"
                android:text="@string/db_filterButton"
                app:layout_constraintBottom_toTopOf="@+id/FilteredTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/MountDatabaseImageView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/FilteredTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="8dp"
                android:text="@string/db_filteredTextView"
                android:textAlignment="center"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/MountDatabaseImageView"
                app:layout_constraintTop_toBottomOf="@+id/FilterButton" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/MountHeaderTextView"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:background="@color/Navy"
            android:backgroundTint="@color/material_on_background_emphasis_high_type"
            android:backgroundTintMode="add"
            android:gravity="center_vertical"
            android:paddingLeft="32dp"
            android:text="@string/db_mountHeader"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/ListViewConstraintLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ConstraintLayout2" />

        <TextView
            android:id="@+id/MountsRetrievedTextView"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:background="@color/Navy"
            android:backgroundTint="@color/material_on_background_emphasis_high_type"
            android:backgroundTintMode="add"
            android:paddingTop="10dp"
            android:paddingRight="8dp"
            android:text="@string/db_receivedFromApi"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/ListViewConstraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/MountHeaderTextView"
            app:layout_constraintTop_toBottomOf="@+id/ConstraintLayout2" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ListViewConstraintLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/MountHeaderTextView">

            <TextView
                android:id="@+id/ListViewStatusTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/backgroundDark"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ListView
                android:id="@+id/MountListView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:divider="@color/Navy">

            </ListView>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#FFFFFF"
        app:headerLayout="@layout/header"
        app:itemTextColor="#303030"
        app:itemIconTint="#303030"
        app:menu="@menu/drawer_menu"></com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>